--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "ext-json": "*",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "symfony/event-dispatcher": "^4.3 || ^5.0"
+        "symfony/event-dispatcher": "^3.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
